--- a/css/carrito.css
+++ b/css/carrito.css
@@ -87,10 +87,14 @@ header {
 .producto {
     padding: 5rem;
 }
+.grid-template-carrito {
+    grid-template-columns: repeat(2, auto);
+}
 .item-producto {
     background-color: #000000;
     padding: 1.5rem;
     border-radius: 15px;
+    width: 375px;
 }
 .producto-img {
     width: 120px;
