--- a/css/carrito.css
+++ b/css/carrito.css
@@ -20,6 +20,11 @@ header {
     padding-block: .5rem;
     background-color: black;
 }
+header {
+    top: 0px;
+    position: sticky;
+    z-index: 1000;
+}
 
 .grid {
     display: grid;
@@ -66,22 +71,126 @@ header {
     color: white;
     transition: all .3s ease-in-out;
 }
-.gap5rem {
-    gap: 5rem
+.gap2rem {
+    gap: 2rem
 }
 #burgercheck {
-    display: none;
-}
-.burger-icon {
-    display: none;
-    color: white;
-}
-.logo-burger {
     display: none;
 }
 .title-logo div > h1 {
     color: #401e08;
 }
+
+/*------- VER PRODUCTO CARRITO ---------*/
+.burger-icon {
+    color: white;
+}
+.burger-icon {
+    display: inline-block;
+    position: absolute;
+    top: 33px;
+    right: 30px;
+    font-size: 1.5rem;
+    cursor: pointer;
+}
+.navegation > ul {
+    position: fixed;
+    background-color: black;
+    top: 0;
+    padding: 1rem;
+    width: 50%;
+    max-width: 300px;
+    height: 100vh;
+    left: -100%;
+    z-index: 999;
+    transition: all .5s ease-in-out;
+    overflow: scroll;
+}
+#burgercheck:checked ~ ul  {
+    left: 0;
+}
+.navegation ul .burger-center{
+    padding-left: 1rem;
+}
+.navegation ul li > a {
+    color: white;
+} 
+.flex-row-2 {
+    flex-direction: column;
+}
+.center-nav {
+    display: flex;
+    place-content: center;
+}
+.logo-burger {
+    display: inline-block;
+}
+.logo-burger-img img {
+    width: 15rem;
+}
+.logo-burger-text {
+    font-size: clamp(10px, 3vw, 19px);
+}
+.gap5rem {
+    gap: 3rem;
+}
+.burger-center {
+    display: flex;
+    justify-content: left;
+    align-items: center;
+}
+
+.title-carrito {
+    color: white;
+    font-size: clamp(15px, 3vw, 20px);
+}
+.carrito-img img {
+    width: 3rem;
+    filter: drop-shadow(0px 0px 2px white);
+}
+.carrito-title {
+    font-size: clamp(15px, 3vw, 20px);
+    text-transform: uppercase;
+    font-weight: bold;
+    color: white;
+}
+.carrito-formato, .carrito-cantidad ,
+.carrito-subtotal {
+    font-size: 13px;
+    color: white;
+}
+
+.mi-carrito-gap {
+    gap: 20px;
+}
+.mi-carrito-gap2 {
+    gap: 10px;
+}
+.mi-carrito-gap3 {
+    gap: 3px;
+}
+
+#carrito-for, #carrito-cant, #carrito-sub {
+    font-size: clamp(15px, 3vw, 15px);
+    color: white;
+    text-transform: uppercase;
+}
+
+.mi-producto {
+    position: relative;
+} 
+.delete {
+    position: absolute;
+    color: white;
+    left: 13rem;
+    background-color: red;
+    padding-block: .2rem;
+    padding-inline: .3rem;
+    border-radius: 100%;
+    cursor: pointer;
+    font-size: clamp(15px, 3vw, 20px);
+}
+
 
 /*------------- CARRITO ---------------*/
 .producto {
@@ -384,6 +493,11 @@ footer {
         justify-content: left;
         align-items: center;
     }
+
+    /*---------- CARRITO -----------*/
+    .grid-template-carrito {
+        grid-template-columns: repeat(1, auto);
+    }
     
     /*-------------- FOOTER --------------*/ 
     .footer-column-2 {
@@ -482,6 +596,14 @@ footer {
         display: flex;
         justify-content: left;
         align-items: center;
+    }
+
+    /*---------- CARRITO -----------*/
+    .producto {
+        padding: 3rem;
+    }
+    .grid-template-carrito {
+        grid-template-columns: repeat(1, auto);
     }
 
     /*-------------- FOOTER --------------*/ 
