--- a/css/carrito.css
+++ b/css/carrito.css
@@ -145,11 +145,13 @@ header {
     font-size: clamp(15px, 3vw, 20px);
 }
 .carrito-img img {
-    width: 3rem;
+    width: 6rem;
+    height: 6rem;
+    object-fit: contain;
     filter: drop-shadow(0px 0px 2px white);
 }
 .carrito-title {
-    font-size: clamp(15px, 3vw, 20px);
+    font-size: clamp(13px, 3vw, 18px);
     text-transform: uppercase;
     font-weight: bold;
     color: white;
@@ -157,11 +159,11 @@ header {
 .carrito-formato, .carrito-cantidad ,
 .carrito-subtotal {
     font-size: 13px;
-    color: white;
+    color: rgb(240, 240, 240);
 }
 
 .mi-carrito-gap {
-    gap: 20px;
+    gap: 10px;
 }
 .mi-carrito-gap2 {
     gap: 10px;
@@ -171,24 +173,31 @@ header {
 }
 
 #carrito-for, #carrito-cant, #carrito-sub {
-    font-size: clamp(15px, 3vw, 15px);
-    color: white;
+    font-size: clamp(15px, 3vw, 17px);
+    color: rgb(255, 255, 255);
     text-transform: uppercase;
 }
 
-.mi-producto {
+.item-carrito {
     position: relative;
-} 
-.delete {
+}
+
+.item-delete {
     position: absolute;
     color: white;
-    left: 13rem;
+    left: 15.5rem;
+    top: -1rem;
     background-color: red;
     padding-block: .2rem;
     padding-inline: .3rem;
     border-radius: 100%;
     cursor: pointer;
     font-size: clamp(15px, 3vw, 20px);
+    transition: all .3s ease-in-out;
+}
+.item-delete:hover {
+    color: red;
+    background-color: white;
 }
 
 
@@ -201,15 +210,15 @@ header {
 }
 .item-producto {
     background-color: #000000;
-    padding: 1.5rem;
+    padding-inline: 1.5rem;
+    padding-block: 2rem;
     border-radius: 15px;
-    width: 375px;
-}
-.producto-img {
-    width: 120px;
+    width: 450px;
 }
 .producto-img img {
-    width: 6rem;
+    width: 13rem;
+    height: 13rem;
+    object-fit: contain;
     filter: drop-shadow(0 0 5px #c2c1c1);
 }
 .producto-name {
@@ -240,14 +249,15 @@ header {
     grid-template-columns: repeat(3, auto);
     gap: .5rem;
 }
-.gap-producto {
-    gap: 1.7rem;
-}
+
 .gap-producto-2 {
     gap: 1rem;
 }
 .gap-producto-3 {
     gap: .5rem;
+}
+.gap-producto-5 {
+    gap: 1.7rem;
 }
 .producto-cantidad {
     width: 28px;
