update - armar tu six pack

--- a/css/mi_carrito.css
+++ b/css/mi_carrito.css
@@ -398,6 +398,7 @@ main {
 }
 .finalizar button {
     position: fixed;
+    z-index: 9999;
     right: 1%;
     bottom: 2%;
     background-color: black;
