--- a/css/producto_css.css
+++ b/css/producto_css.css
@@ -179,7 +179,7 @@ header {
     margin-bottom: 10rem;
 }
 .productos-column-3 {
-    grid-template-columns: repeat(auto-fit, minmax(300px, 300px));
+    grid-template-columns: repeat(3, auto);
     gap: 2.61rem;
 }
 .img-producto img {
@@ -393,7 +393,7 @@ footer {
         background-size: cover;
     }
 }
-@media (1014px < width < 1845px) {
+@media (1161px < width < 1845px) {
     /*--------------  PRODUCTOS -----------------*/
     .productos {
         padding-block: 5rem;
@@ -401,7 +401,7 @@ footer {
         background-size: contain;
     }
 }
-@media (min-width: 1013px) {
+@media (min-width: 1160px) {
     /*--------------  VER PRODUCTOS -----------------*/
     .ver-producto article {
         width: 980px;
@@ -420,7 +420,7 @@ footer {
         padding-inline: 3.6rem;
     }
 }
-@media (850px < width < 1012px) {
+@media (850px < width < 1159px) {
     /*-------------- HEADER --------------*/ 
     header {
         top: 0px;
@@ -515,6 +515,11 @@ footer {
     .my-item {
         position: relative;
         top: -6rem;
+    }
+
+    .productos-column-3 {
+        grid-template-columns: repeat(2, auto);
+        gap: 2.61rem;
     }
 
     /*-------------- FOOTER --------------*/ 
@@ -654,6 +659,10 @@ footer {
         top: -6rem;
     }
 
+    .productos-column-3 {
+        grid-template-columns: repeat(1, auto);
+        gap: 2.61rem;
+    }
 
     /*-------------- FOOTER --------------*/ 
     .footer-column-2 {
@@ -796,6 +805,7 @@ footer {
         margin-bottom: 5.5rem;
     }
     .productos-column-3 {
+        grid-template-columns: repeat(1, auto);
         gap: 4rem;
     }
     .text-section {
@@ -964,6 +974,7 @@ footer {
         width: 250px;
     }
     .productos-column-3 {
+        grid-template-columns: repeat(1, auto);
         gap: 4.5rem;
     }
     .item-producto img {
@@ -1131,6 +1142,7 @@ footer {
         width: 250px;
     }
     .productos-column-3 {
+        grid-template-columns: repeat(1, auto);
         gap: 5rem;
     }
     .img-producto img {
