--- a/css/nosotros_css.css
+++ b/css/nosotros_css.css
@@ -130,18 +130,17 @@ header {
 }
 .hover-text {
     position: absolute;
-    left: 0;
-    width: 5%;
-    height: 100%;
     background-color: #fae98e;
+    width: 100%;
+    height: 10%;
     border-radius: 10px;
-    transition: all .2s ease-in-out;
+    z-index: -1;
+    transition: all .3s ease-in-out;
 }
 .hover-text p {
     text-align: center;
     font-size: 16px;
     padding: 15px;
-    display: none;
 }
 .item-valores > img {
     width: 6.5rem;
@@ -152,12 +151,7 @@ header {
 .item-valores:hover {
     .hover-text {
         z-index: 0;
-        width: 100%;
-        border-radius: 10px;
-    }
-    .hover-text p {
-        display: inline;
-        color: black
+        height: 100%;
     }
 }
 
