--- a/css/taproom_css.css
+++ b/css/taproom_css.css
@@ -95,7 +95,7 @@ header {
     height: 800px;
 }
 .taproom-title {
-    font-size: clamp(22px, 3vw, 45px);
+    font-size: clamp(30px, 3vw, 45px);
     text-transform: uppercase;
     color: white;
     padding-inline: .6rem;
@@ -123,6 +123,7 @@ header {
     text-transform: uppercase;
     transition: all .3s ease-in-out;
     cursor: pointer;
+    box-shadow: 0 0 2px rgb(85, 85, 85);
 }
 .taproom-btn button:hover {
     color: black;
