--- a/css/servicios_css.css
+++ b/css/servicios_css.css
@@ -140,6 +140,7 @@ header {
 }
 .ser-enlace:hover {
     background-color: #9c5b0c;
+    color: rgb(243, 239, 239);
 }
 .gap-ser {
     gap: 1.2rem;
