--- a/css/craft-beer_css.css
+++ b/css/craft-beer_css.css
@@ -12,7 +12,7 @@ a {
     text-decoration: none;
     color: black;
 }
-ul > li {
+li {
     list-style: none;
 }
 header {
@@ -47,8 +47,11 @@ header {
 }
 
 /*----------- CRAFT BEER ----------*/
-.my-craft-beer {
+.box { 
     background-color: black;
+    padding: 3rem;
+}
+.my-craft-beer {
     color: white;
 }
 
@@ -74,4 +77,12 @@ button {
 .btns {
     font-size: clamp(15px, 3vw, 20px);
     cursor: pointer;
+}
+
+.pre-2 {
+    position: absolute;
+}
+.pre img {
+    filter: blur(5px) grayscale(100%) drop-shadow(0 0 5px white);
+    opacity: .5;
 }
