--- a/css/producto_css.css
+++ b/css/producto_css.css
@@ -94,22 +94,23 @@ header {
     gap: 4rem;
 }
 .ver-producto-img {
-    background-color: #efd15a;
+    background-color: #ffa500;
     padding: 4rem;
     border-radius: 1rem;
     min-width: 230px;
     max-width: 100%;
-    height: 400px;
 }
 .producto-img {
     width: 130px;
     height: 350px;
     object-fit: cover;
+    filter: drop-shadow(0 0 3px white);
 }
 .producto-img-2 {
     width: 230px;
     height: 350px;
     object-fit: cover;
+    filter: drop-shadow(0 0 3px white);
 }
 .producto-title {
     font-size: clamp(23px, 3vw, 27px);
