--- a/css/nosotros_css.css
+++ b/css/nosotros_css.css
@@ -82,7 +82,9 @@ header {
     padding-top: 5rem;
     text-transform: uppercase;
     color: #401e08;
-    font-size: clamp(20px, 3vw, 29px);
+    font-size: clamp(25px, 3vw, 35px);
+    font-family: 'Bilcase Demo', sans-serif;
+    letter-spacing: 2px;
 }
 .about {
     padding-inline: .6rem;
