--- a/css/productos_css.css
+++ b/css/productos_css.css
@@ -114,10 +114,12 @@ header {
     filter: grayscale(0%);
 }*/
 .title-productos {
-    text-transform: uppercase;
     margin-bottom: 5rem;
+    text-transform: uppercase;
     color: #401e08;
-    font-size: clamp(20px, 3vw, 29px);
+    font-size: clamp(25px, 3vw, 35px);
+    font-family: 'Bilcase Demo', sans-serif;
+    letter-spacing: 2px;
 }
 .title-productos-2 {
     margin-bottom: 5rem;
